Add small error fix
